# uwsimbenchmarks

./: .travis.yml  README.md  rosdep.yaml
UWSim/: CMakeLists.txt  manifest.xml
UWSim/data/scenes/: UWSimScene.dtd  cirs.xml  visionBenchmarkScene.xml
UWSim/src/: BulletPhysics.cpp  BulletPhysics.h  ConfigXMLParser.cpp  ConfigXMLParser.h  Current.cpp  Current.h  EventHandler.h  KinematicChain.h  PhysicsBuilder.cpp  PhysicsBuilder.h  ROSInterface.cpp  SceneBuilder.cpp  SceneBuilder.h  SimulatedIAUV.cpp  SimulatedIAUV.h  URDFRobot.cpp  URDFRobot.h  UWSimUtils.cpp  UWSimUtils.h  VirtualCamera.cpp  main.cpp
UWSimBenchmarks/: CMakeLists.txt  manifest.xml  package.xml
UWSimBenchmarks/data/: benchmark.dtd  simpleBenchmark.xml  testbenchmark.xml  trackingBenchmarkauto.xml  visionBenchmark.xml  visionBenchmarkauto.xml
UWSimBenchmarks/data/scenes/: trackingScene.xml
UWSimBenchmarks/src/: Benchmark.cpp  Benchmark.h  BenchmarkROSInterfaces.cpp  BenchmarkROSInterfaces.h  BenchmarkXMLParser.cpp  BenchmarkXMLParser.h  BenchmarksConfig.h  BenchmarksConfig.h.cmake  Current.h  Measures.cpp  Measures.h  SceneUpdater.cpp  SceneUpdater.h  Trigger.cpp  Trigger.h  main.cpp
UWSimPhysics/: CMakeLists.txt  mainpage.dox  manifest.xml
UWSimPhysics/src/: BulletPhysics.h  main.cpp
osgWorks/: Makefile
uwsimbenchmarks/: CMakeLists.txt  package.xml
uwsimbenchmarks/data/: benchmark.dtd  pipeFollowing.xml  reconstruction.xml  simpleBenchmark.xml  testbenchmark.xml  trackingBenchmarkDynamics.xml  trackingBenchmarkauto.xml  visionBenchmark.xml  visionBenchmarkRecursive.xml  visionBenchmarkauto.xml
uwsimbenchmarks/data/scenes/: dynamicsTrackingScene.xml  trackingScene.xml  visionBenchmarkScene.xml
uwsimbenchmarks/src/: BagPlayer.cpp  BagPlayer.h  Benchmark.cpp  Benchmark.h  BenchmarkROSInterfaces.cpp  BenchmarkROSInterfaces.h  BenchmarkXMLParser.cpp  BenchmarkXMLParser.h  Current.cpp  Current.h  FogAdderBagPlayer.cpp  FogAdderBagPlayer.h  Measures.cpp  Measures.h  SceneUpdater.cpp  SceneUpdater.h  main.cpp
uwsimbenchmarks/srv/: GTpublish.srv
