<?xml version="1.0"?>
<package>
  <name>uwsimbenchmarks</name>
  <version>0.2.0</version>
  <description>
     UWSimBenchmarks, Benchmarks package for UWSim.
  </description>

  <author email="perezsolerj@gmail.com">Javier Perez</author>
  <maintainer email="perezsolerj@gmail.com">Javier Perez</maintainer>

  <license>GPL</license>
  <url> </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uwsim</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>muparser</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>osg_interactive_markers</build_depend>
  <build_depend>osg_markers</build_depend>
  <build_depend>osg_utils</build_depend>
  <build_depend>uwsim_bullet</build_depend>
  <build_depend>uwsim_osgbullet</build_depend>
  <build_depend>uwsim_osgocean</build_depend>
  <build_depend>uwsim_osgworks</build_depend>

  <run_depend>uwsim</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>muparser</run_depend>
  <run_depend>osg_interactive_markers</run_depend>
  <run_depend>osg_markers</run_depend>
  <run_depend>osg_utils</run_depend>
  <run_depend>uwsim_bullet</run_depend>
  <run_depend>uwsim_osgbullet</run_depend>
  <run_depend>uwsim_osgocean</run_depend>
  <run_depend>uwsim_osgworks</run_depend>

</package>
